--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,9 +6,37 @@ html, body {
 }
 
 .single-task {
+    color: white;
     min-height: 75px;
     padding: 5px;
-    background: green;
+    background: salmon;
     position: relative;
     margin-bottom: 10px;
+}
+
+.task-control-panel {
+    width: 100%;
+    height: 40px;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.color-circle {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+}
+
+.inner-textarea {
+    resize: none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    padding: 5px;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    background: #fff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.35);
 }
